fixed up the dataframes

--- a/fnn.ipynb
+++ b/fnn.ipynb
@@ -6,24 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-17 11:39:44.690889: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-11-17 11:39:44.850121: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-11-17 11:39:44.850182: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-11-17 11:39:44.860836: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-11-17 11:39:44.890141: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-11-17 11:39:44.890541: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-11-17 11:39:46.082840: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.15.0\n"
+      "2.13.0\n"
      ]
     }
    ],
@@ -60,19 +46,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_attendance = pd.read_csv('attendance.csv')\n",
+    "df_games = pd.read_csv('games.csv')\n",
+    "\n",
     "excludeYears = [2000, 2001]\n",
     "\n",
-    "df_attendance = pd.read_csv('attendance.csv')\n",
+    "# Removes any rows containing a null value from the datasets\n",
     "df_attendance = df_attendance[~df_attendance['year'].isin(excludeYears)]\n",
+    "df_attendance = df_attendance.dropna()\n",
+    "droppit = ['team', 'total', 'home', 'away']\n",
+    "df_attendance = df_attendance.drop(droppit, axis=1)\n",
+    "df_attendance.rename(columns={'team_name': 'home_team_name'}, inplace=True)\n",
+    "df_attendance['week'] = df_attendance['week'].astype(int)\n",
     "\n",
-    "df_games = pd.read_csv('games.csv')\n",
     "df_games = df_games[~df_games['year'].isin(excludeYears)]\n",
+    "droppa = ['home_team', 'away_team', 'tie', 'home_team_city', 'away_team_city']\n",
+    "exclude_weeks = ['WildCard', 'Division', 'ConfChamp', 'SuperBowl']\n",
+    "df_games = df_games.drop(droppa, axis=1)\n",
+    "df_games = df_games[~df_games['week'].isin(exclude_weeks)]\n",
+    "df_games = df_games.dropna()\n",
+    "df_games['week'] = df_games['week'].astype(int)\n",
     "\n",
-    "df_standings = pd.read_csv('standings.csv')"
+    "right = ['year', 'week', 'home_team_name']\n",
+    "df_result = df_attendance.merge(df_games, on=right)\n",
+    "to_convert_categorical = ['home_team_name', 'time', 'winner', 'day', 'away_team_name']\n",
+    "\n",
+    "df_result[to_convert_categorical] = df_result[to_convert_categorical].astype('category')\n",
+    "df_result = df_result.drop('date', axis=1)"
    ]
   },
   {
@@ -86,9 +90,7 @@
     "Y = df_attendance['weekly_attendance']\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
-    "# X_valid = 0??\n",
-    "\n",
-    "# Y_valid = 0??\n"
+    "\n"
    ]
   },
   {
