for consistency purposes

--- a/svm.ipynb
+++ b/svm.ipynb
@@ -70,7 +70,9 @@
     "\n",
     "df_result_numerical = df_result.select_dtypes(include=[np.number])\n",
     "\n",
-    "correlation_matrix = df_result_numerical.corr()"
+    "correlation_matrix = df_result_numerical.corr()\n",
+    "\n",
+    "df_result"
    ]
   },
   {
