lets try that again

--- a/svm.ipynb
+++ b/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home_team_name</th>\n",
+       "      <th>year</th>\n",
+       "      <th>week</th>\n",
+       "      <th>weekly_attendance</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>day</th>\n",
+       "      <th>pts_win</th>\n",
+       "      <th>pts_loss</th>\n",
+       "      <th>yds_win</th>\n",
+       "      <th>turnovers_win</th>\n",
+       "      <th>yds_loss</th>\n",
+       "      <th>turnovers_loss</th>\n",
+       "      <th>away_team_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cardinals</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>3</td>\n",
+       "      <td>28980</td>\n",
+       "      <td>San Diego Chargers</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>23</td>\n",
+       "      <td>15</td>\n",
+       "      <td>289</td>\n",
+       "      <td>1</td>\n",
+       "      <td>297</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Chargers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cardinals</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30014</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>21</td>\n",
+       "      <td>7</td>\n",
+       "      <td>263</td>\n",
+       "      <td>1</td>\n",
+       "      <td>263</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Giants</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cardinals</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>7</td>\n",
+       "      <td>59702</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>380</td>\n",
+       "      <td>1</td>\n",
+       "      <td>342</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Cowboys</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cardinals</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>9</td>\n",
+       "      <td>47819</td>\n",
+       "      <td>St. Louis Rams</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>27</td>\n",
+       "      <td>14</td>\n",
+       "      <td>415</td>\n",
+       "      <td>2</td>\n",
+       "      <td>235</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Rams</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cardinals</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>10</td>\n",
+       "      <td>29252</td>\n",
+       "      <td>Seattle Seahawks</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>27</td>\n",
+       "      <td>6</td>\n",
+       "      <td>406</td>\n",
+       "      <td>0</td>\n",
+       "      <td>337</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Seahawks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4603</th>\n",
+       "      <td>Redskins</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>7</td>\n",
+       "      <td>61459</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>283</td>\n",
+       "      <td>1</td>\n",
+       "      <td>154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49ers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4604</th>\n",
+       "      <td>Redskins</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>11</td>\n",
+       "      <td>56426</td>\n",
+       "      <td>New York Jets</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>34</td>\n",
+       "      <td>17</td>\n",
+       "      <td>400</td>\n",
+       "      <td>2</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Jets</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4605</th>\n",
+       "      <td>Redskins</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>12</td>\n",
+       "      <td>57754</td>\n",
+       "      <td>Washington Redskins</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "      <td>230</td>\n",
+       "      <td>2</td>\n",
+       "      <td>364</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Lions</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4606</th>\n",
+       "      <td>Redskins</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>15</td>\n",
+       "      <td>63246</td>\n",
+       "      <td>Philadelphia Eagles</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>37</td>\n",
+       "      <td>27</td>\n",
+       "      <td>415</td>\n",
+       "      <td>1</td>\n",
+       "      <td>352</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Eagles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4607</th>\n",
+       "      <td>Redskins</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>16</td>\n",
+       "      <td>66083</td>\n",
+       "      <td>New York Giants</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>41</td>\n",
+       "      <td>35</td>\n",
+       "      <td>552</td>\n",
+       "      <td>0</td>\n",
+       "      <td>361</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Giants</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4608 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     home_team_name  year  week  weekly_attendance               winner  day  \\\n",
+       "0         Cardinals  2002     3              28980   San Diego Chargers  Sun   \n",
+       "1         Cardinals  2002     4              30014    Arizona Cardinals  Sun   \n",
+       "2         Cardinals  2002     7              59702    Arizona Cardinals  Sun   \n",
+       "3         Cardinals  2002     9              47819       St. Louis Rams  Sun   \n",
+       "4         Cardinals  2002    10              29252     Seattle Seahawks  Sun   \n",
+       "...             ...   ...   ...                ...                  ...  ...   \n",
+       "4603       Redskins  2019     7              61459  San Francisco 49ers  Sun   \n",
+       "4604       Redskins  2019    11              56426        New York Jets  Sun   \n",
+       "4605       Redskins  2019    12              57754  Washington Redskins  Sun   \n",
+       "4606       Redskins  2019    15              63246  Philadelphia Eagles  Sun   \n",
+       "4607       Redskins  2019    16              66083      New York Giants  Sun   \n",
+       "\n",
+       "      pts_win  pts_loss  yds_win  turnovers_win  yds_loss  turnovers_loss  \\\n",
+       "0          23        15      289              1       297               3   \n",
+       "1          21         7      263              1       263               3   \n",
+       "2           9         6      380              1       342               4   \n",
+       "3          27        14      415              2       235               3   \n",
+       "4          27         6      406              0       337               5   \n",
+       "...       ...       ...      ...            ...       ...             ...   \n",
+       "4603        9         0      283              1       154               1   \n",
+       "4604       34        17      400              2       225               1   \n",
+       "4605       19        16      230              2       364               4   \n",
+       "4606       37        27      415              1       352               1   \n",
+       "4607       41        35      552              0       361               0   \n",
+       "\n",
+       "     away_team_name  \n",
+       "0          Chargers  \n",
+       "1            Giants  \n",
+       "2           Cowboys  \n",
+       "3              Rams  \n",
+       "4          Seahawks  \n",
+       "...             ...  \n",
+       "4603          49ers  \n",
+       "4604           Jets  \n",
+       "4605          Lions  \n",
+       "4606         Eagles  \n",
+       "4607         Giants  \n",
+       "\n",
+       "[4608 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# put the two csv files into two distinct dataframes\n",
     "df_attendance = pd.read_csv('attendance.csv')\n",
